[tool.poetry]
name = "ctx-python"
version = "0.0.1-alpha.6"
description = "A Python API client for US EPA's Computational Toxicology and Exposure APIs."
authors = ["Katherine Phillips <phillips.katherine@epa.gov>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "ctxpy"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry"
]
repository="https://github.com/USEPA/ctx-python"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctx_init = "ctxpy.command_line:main"

[tool.ruff]
