[project]
name = "ctx-python"
version = "0.0.1a8"
description = "A Python API client for US EPA's Computational Toxicology and Exposure APIs."
authors = [{ name = "Katherine Phillips", email = "phillips.katherine@epa.gov" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pandas>=2.1.4,<3",
    "requests>=2.31.0,<3",
    "python-dotenv>=1.0.1,<2",
]

[project.urls]
Repository = "https://github.com/USEPA/ctx-python"

[project.scripts]
ctx_init = "ctxpy.command_line:main"

[tool.hatch.build.targets.sdist]
include = ["ctxpy"]

[tool.hatch.build.targets.wheel]
include = ["ctxpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]

[tool.ruff]
