[project]
name = "ctx-python"
version = "0.0.1a12"
description = "A Python API client for US EPA's Computational Toxicology and Exposure APIs."
authors = [
    { name = "kaphillips", email = "phillips.katherine@epa.gov" }
]
requires-python = ">=3.14"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.urls]
Repository = "https://github.com/USEPA/ctx-python"

[project.scripts]
ctx_init = "ctxpy.command_line:main"

[tool.hatch.build.targets.sdist]
include = [
  "src/ctxpy",
  "README.md",
  "LICENSE*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctxpy"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "openpyxl>=3.1.5",
    "pylint>=4.0.6",
    "ruff>=0.15.22",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL"]  # Includes Pyflakes, pycodestyle, isort, and Pylint rule